--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "start": "nodemon backend/server.js"
   },
   "type":"module",
   "keywords": [],
