--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chatbot": "file:..",
     "http-proxy-middleware": "^3.0.3",
     "i": "^0.3.7",
     "react": "^18.3.1",
