--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ dist-ssr
 *.local
 
 .env
-/node_modules
-
+frontend/node_modules
+backend/node_modules
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
