--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,23 +2,12 @@
     "installCommand": "npm install --legacy-peer-deps",
     "version":2,
     "builds": [
-        {
-            "src": "server.js",
-            "use":"@vercel/node"
-        },
-        {
-            "src": "src/**/**",
-            "use":"@vercel/node"
-        },
-        {
-            "src": "src/**/**",
-            "use":"@vercel/node"
+      {
+        "src": "vite.config.js",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"
         }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      }
     ]
 }
