--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ dist-ssr
 .env
 frontend/node_modules
 backend/node_modules
+frontend/.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
